added hidden form in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,13 @@
 </head>
 <body>
   <div id="root"></div>
+
+  <!-- help the Netlify bots detect out form -->
+  <form name="contact" netlify netlify-honeypot="bot-field" action="/" hidden>
+    <input type="text" name="name">
+    <input type="email" name="email">
+    <textarea name="message"></textarea>
+  </form>
+
 </body>
 </html>
