added route in html form

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <div id="root"></div>
 
   <!-- help the Netlify bots detect out form -->
-  <form name="contact" netlify netlify-honeypot="bot-field" action="/" hidden>
+  <form name="contact" netlify netlify-honeypot="bot-field" action="/contact" hidden>
     <input type="text" name="name">
     <input type="email" name="email">
     <textarea name="message"></textarea>
