--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Christian Valenzuela, Javascript Developer"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" />
     
@@ -27,7 +27,7 @@
 <body>
   <div id="root"></div>
 
-  <!-- help the Netlify bots detect out form -->
+  <!-- help the Netlify bots detect my form -->
   <form name="contact" netlify netlify-honeypot="bot-field" action="/contact" hidden>
     <input type="text" name="name">
     <input type="email" name="email">
